--- a/styles/main.css
+++ b/styles/main.css
@@ -10096,9 +10096,11 @@ body {
   #schedule ul li {
     background-color: rgba(255, 255, 255, 0.9);
     margin-bottom: 20px;
-    padding: 20px;
+    margin-right: 150px;
+    margin-left: 150px;
+    padding: 10px;
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
     display: flex;
     flex-direction: column;
     position: relative;
@@ -10140,8 +10142,8 @@ body {
     background-image: url("../images/gift/heart.gif"); /* Flower border image at the bottom */
     background-size: contain;
     background-repeat: no-repeat;
-    left : 720px;
-    top: 30px;
+    left : 320px;
+    top: 8px;
     bottom: 0px;
   }
   
